// service task, which is running in a worker thread
message service_task_run {
    required string service_name = 2;

    required string api_name = 3;
    // 0: OK
    // 1: invalid service name
    // 2: service busy
    required uint32 io_status = 4;

    // caller scheduler
    required uint64 src = 5;

    // txn taskdata
    required uint64 taskdata = 6;
}

// notify master the task is complete, and master will update the status
message service_task_complete {
    required string service_name  = 1;
    required int32  resume_wf     = 2;
    required int32  svc_task_done = 3;
}

// Run service api callback
message service_task_cb {
    required uint64 taskdata      = 1;
    required string service_name  = 2;
    required string api_name      = 3;
    required uint32 task_status   = 4;
    required int32  svc_task_done = 5;
}
